--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
+# private directory not to be pushed to the git repository. Should contain the server certificate files server.key and server.pem
+private
+
 *.exe
